# roostindoostin

./: .gitignore
chat_app/: .env  .gitignore  Cargo.toml  doostinLEARNS.md
chat_app/FE/chat-app-frontend/src/: App.js
chat_app/FE/chat-app-frontend/src/components/: ChatRoom.js  Login.js  Register.js
chat_app/migrations/2024-02-07-001854_create_users/: up.sql
chat_app/migrations/2024-02-07-001917_create_messages/: up.sql
chat_app/src/: main.rs  models.rs  schema.rs
