[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.0"
actix-web-actors = "4.0"
actix-rt = "2.4"
bcrypt = "0.8.0"
chrono = "0.4"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"


thiserror = "1.0"  # For custom error types
tokio = { version = "1", features = ["full"] }